Add ability to enter user name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="pointer_label">Single Pointer</string>
     <string name="multiple_pointer_label">Multiple Pointer</string>
     <string name="game_over_label">Game Over</string>
+    <string name="manual_text_entry_label">Manual Text Entry</string>
 </resources>
